<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_theme_header">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_theme_nightmode"
            android:summary="@string/preference_theme_nightmode_sub"
            android:title="@string/preference_theme_nightmode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_giveaways">
        <ListPreference
            android:defaultValue="details;list"
            android:summary="%s"
            android:entries="@array/preference_giveaway_load_images_entries"
            android:entryValues="@array/preference_giveaway_load_images_entry_values"
            android:key="preference_giveaway_load_images"
            android:title="@string/preference_giveaway_load_images" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_giveaway_show_pinned"
            android:summaryOff="@string/preference_giveaway_show_pinned_off"
            android:summaryOn="@string/preference_giveaway_show_pinned_on"
            android:title="@string/preference_giveaway_show_pinned" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_discussions">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_discussion_comments_reversed"
            android:summaryOff="@string/preference_discussion_comments_reversed_sub_off"
            android:summaryOn="@string/preference_discussion_comments_reversed_sub_on"
            android:title="@string/preference_discussion_comments_reversed" />
    </PreferenceCategory>
</PreferenceScreen>