<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="preferences_sg_header"
        android:title="@string/preferences_sg_header">

        <CheckBoxPreference android:title="@string/preference_notifications"
            android:defaultValue="true"
            android:key="preference_notifications"/>

        <Preference android:title="@string/preference_sg_sync">
            <intent
                android:targetClass="net.mabako.steamgifts.activities.SyncActivity"
                android:targetPackage="net.mabako.steamgifts" />
        </Preference>

        <Preference
            android:summary="@string/preference_sg_hidden_games_sub"
            android:title="@string/preference_sg_hidden_games">

            <intent
                android:targetClass="net.mabako.steamgifts.activities.settings.ViewHiddenGamesActivity"
                android:targetPackage="net.mabako.steamgifts" />
        </Preference>

        <Preference
            android:key="preference_sg_logout"
            android:title="@string/logout" />
    </PreferenceCategory>
</PreferenceScreen>