<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="preferences_other"
        android:title="@string/preferences_other">
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/preference_browser_entries"
            android:entryValues="@array/preference_browser_entry_values"
            android:key="preference_external_browser"
            android:summary="%s"
            android:title="@string/preference_browser" />

        <Preference
            android:enabled="false"
            android:key="tools_preference_default_app"
            android:summary="@string/preference_default_app_summary"
            android:title="@string/preference_default_app" />
    </PreferenceCategory>
</PreferenceScreen>