<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DetailActivity">

    <item
        android:id="@+id/add_saved_element"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/add_saved_discussion"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/remove_saved_element"
        android:icon="@drawable/ic_star"
        android:title="@string/remove_saved_discussion"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_send"
        android:title="@string/add_comment"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

    <item
        android:id="@+id/locked"
        android:icon="@drawable/ic_lock"
        android:title="@string/discussion_locked"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />
</menu>