<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_variant"
        android:title="@string/filter"
        android:visible="false"
        app:actionLayout="@layout/menu_badge"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_filter_variant"
        android:title="@string/navigation_discussions_type"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnify"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>