<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/md_white_1000"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/intro_giveaway_indicators_header"
        android:textAppearance="?android:textAppearance"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/intro_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:padding="8dp">

        <include
            android:id="@+id/giveaway"
            layout="@layout/giveaway_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_whitelist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_whitelist"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_group" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_group"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_private" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_private"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_level_positive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_level_positive"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_level_negative" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_level_negative"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/GiveawayIndicatorIcon"
                    android:background="@drawable/circle_indicator_region_restricted" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/intro_giveaway_indicators_region_restricted"
                    android:textAppearance="?android:textAppearance"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>